--- a/src/frontend/views/store.html
+++ b/src/frontend/views/store.html
@@ -148,7 +148,7 @@
                   <div id="PizzaSize" class="diagram"></div>
                 </div>
                 <div class="subsection">
-                  <h2>ABC - Analysis</h2>
+                  <h2 data-tooltip="Yannis Text">ABC - Analysis</h2>
                   <div id="abcAnalysis_pizza_2" class="diagram"></div>
                 </div>
               </div>
@@ -160,13 +160,13 @@
               </div>
               <div class="section-items">
                 <div class="subsection">
-                  <h2 data-tooltip="Text needed">Heatmap</h2>
+                  <h2 data-tooltip="The heatmap shows how often one pizza is ordered with another.">Heatmap</h2>
                   <div id="Heatmap" class="diagram"></div>
                 </div>
               </div>
               <div class="section-items">
                 <div class="subsection">
-                  <h2 class="pizzaPopularityH" data-tooltip="Text needed">Pizza Popularity
+                  <h2 class="pizzaPopularityH" data-tooltip="Shows the popularity of all pizzas over time.">Pizza Popularity
                   </h2>
                   <div id="pizzaPopularity" class="diagram"></div>
                 </div>
@@ -200,7 +200,7 @@
                 </div>
                 <div class="section-items">
                   <div class="subsection">
-                    <h2>Average ingredients used</h2>
+                    <h2 data-tooltip="It shows a forecast of average ingredients used, which can be changed with buttons in the forecast. ">Average ingredients used</h2>
                     <div id="pizzaIngredients" class="diagram"></div>
                   </div>
                 </div>
@@ -249,7 +249,7 @@
                 <h1>Customer</h1>
                 <div class="section-items">
                   <div class="subsection">
-                    <h2>ABC - Analysis</h2>
+                    <h2 data-tooltip="Yannis Text">ABC - Analysis</h2>
                     <div class="diagram" id="abcAnalysis_customer_2"></div>
                     <input type="text" id="customerSearch" placeholder="Search..">
                   </div>
