--- a/src/frontend/views/franchise.html
+++ b/src/frontend/views/franchise.html
@@ -66,7 +66,7 @@
           <div class="section-items">
             <!--PizzaHub-->
             <div class="subsection">
-              <h1 data-tooltip="This section shows the general data of the PizzaHub Franchise">PizzaHub</h1>
+              <h1>PizzaHub</h1>
               <div class="section-items">
                 <div class="statBox">
                   <div class="iconBox">
@@ -148,7 +148,7 @@
             </div>
             <div class="btnbox" id="toggleBarChartBox" style="width: 80px; ">
               <!--TODO add tooltip-->
-              <button data-tooltip="Changes View" class="btn" id="toggleBarChart" style="z-index: 99;" onclick="toggleBarChart();"></button>
+              <button data-tooltip="Changes the view to show every store" class="btn" id="toggleBarChart" style="z-index: 99;" onclick="toggleBarChart();"></button>
             </div>
             <h1 class="centered" data-tooltip="The right chart shows the revenue with your chosen condition. You can choose between the buttons 
                 'STABLE','UNSTABLE','CUSTOM'. You can add stores by clicking those in the bar chart to the right."
@@ -170,7 +170,7 @@
       <!--Bottom section-->
       <div class="section-items">
         <div class="subsection">
-          <h2 class="pizzaPopularityH" data-tooltip="Shows the Popularity of all Pizzas overtime">Pizza Popularity</h2>
+          <h2 class="pizzaPopularityH" data-tooltip="Shows the popularity of all pizzas over time.">Pizza Popularity</h2>
           <div id="pizzaPopularity" class="diagram"></div>
         </div>
         <div class="pizzaRankingChart"></div>
