--- a/src/frontend/styles/main.css
+++ b/src/frontend/styles/main.css
@@ -28,6 +28,14 @@ p {
   margin-left: 7px;
 }
 
+p.positive {
+  color: green;
+}
+
+p.negative {
+  color: red;
+}
+
 * {
   font-family: "Source Sans Pro", sans-serif;
   font-weight: 600;
