Refactor ABC Analysis headings for Pizza and Customers

--- a/src/frontend/views/store.html
+++ b/src/frontend/views/store.html
@@ -172,7 +172,7 @@
                   <div id="PizzaSize" class="diagram"></div>
                 </div>
                 <div class="subsection">
-                  <h2 data-tooltip="Yannis Text">ABC - Analysis</h2>
+                  <h2 data-tooltip="Shows a ABC Analysis of all Pizza sorted by total revenue">ABC - Analysis</h2>
                   <div id="abcAnalysis_pizza_2" class="diagram"></div>
                 </div>
               </div>
@@ -276,7 +276,7 @@
                 <h1>Customer</h1>
                 <div class="section-items">
                   <div class="subsection">
-                    <h2 data-tooltip="Yannis Text">ABC - Analysis</h2>
+                    <h2 data-tooltip="Shows a ABC Analysis of the Customers sorted by total revenue">ABC - Analysis</h2>
                     <div class="diagram" id="abcAnalysis_customer_2"></div>
                     <input type="text" id="customerSearch" placeholder="Search..">
                   </div>
