Add percentage increase functionality

--- a/src/frontend/views/store.html
+++ b/src/frontend/views/store.html
@@ -70,8 +70,8 @@
                   </div>
                   <h2>Orders<h2>
                       <div class="section-items">
-                        <p id="sSales">0</p>
-                        <p id="sSalesChange">00.00%</p>
+                        <p id="totalOrders">0</p>
+                        <p id="totalOrdersChange">00.00%</p>
                       </div>
                 </div>
                 <div class="statBox">
