Bugfixes percentage changes

--- a/src/frontend/views/store.html
+++ b/src/frontend/views/store.html
@@ -80,8 +80,8 @@
                   </div>
                   <h2>Revenue</h2>
                   <div class="section-items">
-                    <p id="sRevenue">0</p>
-                    <p id="sRevenueChange">00.00%</p>
+                    <p id="totalRevenue">0</p>
+                    <p id="totalRevenueChange">00.00%</p>
                   </div>
                 </div>
                 <div class="statBox">
@@ -90,8 +90,8 @@
                   </div>
                   <h2>Customers</h2>
                   <div class="section-items">
-                    <p id="sCustomers">0</p>
-                    <p id="sCustomersChange">00.00%</p>
+                    <p id="totalCustomers">0</p>
+                    <p id="totalCustomersChange">00.00%</p>
                   </div>
                 </div>
                 <div class="statBox">
@@ -100,8 +100,8 @@
                   </div>
                   <h2>Pizzas sold</h2>
                   <div class="section-items">
-                    <p id="sPizzasSold">0</p>
-                    <p id="sPizzasSoldChange">00.00%</p>
+                    <p id="totalPizzasSold">0</p>
+                    <p id="totalPizzasSoldChange">00.00%</p>
                   </div>
                 </div>
               </div>
