Adjust percentage change layouts

--- a/src/frontend/views/franchise.html
+++ b/src/frontend/views/franchise.html
@@ -73,7 +73,7 @@
                   <h2>Orders<h2>
                       <div class="section-items">
                         <p id="totalOrders">0</p>
-                        <p id="totalOrdersChange">00.00%</p>
+                        <p id="totalOrdersChange">0.00%</p>
                       </div>
                 </div>
                 <div class="statBox">
@@ -82,8 +82,8 @@
                   </div>
                   <h2>Revenue</h2>
                   <div class="section-items">
-                    <p id="totalRevenue">0</p>
-                    <p id="totalRevenueChange">00.00%</p>
+                    <p id="totalRevenue">0$</p>
+                    <p id="totalRevenueChange">0.00%</p>
                   </div>
                 </div>
                 <div class="statBox">
@@ -93,7 +93,7 @@
                   <h2>Customers</h2>
                   <div class="section-items">
                     <p id="totalCustomers">0</p>
-                    <p id="totalCustomersChange">00.00%</p>
+                    <p id="totalCustomersChange">0.00%</p>
                   </div>
                 </div>
                 <div class="statBox">
@@ -103,7 +103,7 @@
                   <h2>Pizzas sold</h2>
                   <div class="section-items">
                     <p id="totalPizzasSold">0</p>
-                    <p id="totalPizzasSoldChange">00.00%</p>
+                    <p id="totalPizzasSoldChange">0.00%</p>
                   </div>
                 </div>
               </div>
@@ -120,7 +120,7 @@
                   <h2>Orders</h2>
                   <div class="section-items">
                     <p id="avgOrdersPerCustomer">0</p>
-                    <p id="avgOrdersPerCustomerChange">00.00%</p>
+                    <p id="avgOrdersPerCustomerChange">0.00%</p>
                   </div>
                 </div>
                 <div class="statBox">
@@ -129,8 +129,8 @@
                   </div>
                   <h2>Order Value</h2>
                   <div class="section-items">
-                    <p id="avgOrderValuePerCustomer">0</p>
-                    <p id="avgOrderValuePerCustomerChange">00.00%</p>
+                    <p id="avgOrderValuePerCustomer">0$</p>
+                    <p id="avgOrderValuePerCustomerChange">0.00%</p>
                   </div>
                 </div>
                 <div class="statBox">
@@ -140,7 +140,7 @@
                   <h2>Pizzas per Order</h2>
                   <div class="section-items">
                     <p id="avgPizzasPerOrder">0</p>
-                    <p id="avgPizzasPerOrderChange">00.00%</p>
+                    <p id="avgPizzasPerOrderChange">0.00%</p>
                   </div>
                 </div>
                 <div class="statBox">
@@ -150,7 +150,7 @@
                   <h2>Order frequency</h2>
                   <div class="section-items">
                     <p id="orderFrequency">0</p>
-                    <p id="orderFrequencyChange">00.00%</p>
+                    <p id="orderFrequencyChange">0.00%</p>
                   </div>
                 </div>
               </div>
