--- a/src/frontend/views/franchise.html
+++ b/src/frontend/views/franchise.html
@@ -203,7 +203,7 @@
 
         <div class="section-items" style="width: 50%;">
           <div class="subsection">
-            <h2>Revenue Forecast</h2>
+            <h2>Total Franchise Revenue</h2>
             <div id="revenueForecast" class="diagram" style="height: 300px;"></div>
           </div>
           <div class="subsection">
