--- a/src/frontend/views/store.html
+++ b/src/frontend/views/store.html
@@ -147,8 +147,8 @@
                   </div>
                   <h2>Order frequency</h2>
                   <div class="section-items">
-                    <p id="orderFrequency">0</p> <!-- Placeholder retained -->
-                    <p id="orderFrequencyChange">0.00%</p> <!-- Placeholder retained -->
+                    <p id="orderFrequency">0</p>
+                    <p id="orderFrequencyChange">0.00%</p>
                   </div>
                 </div>
               </div>
@@ -220,7 +220,7 @@
                 <div class="section-items">
                   <div class="subsection">
                     <h2>Average orders per hour</h2>
-                    <div id="dailyOrders" class="diagram"></div>
+                    <div id="dailyOrders" class="diagram" style="height: 365px;"></div>
                   </div>
                 </div>
                 <div class="section-items">
@@ -228,7 +228,7 @@
                     <h2
                       data-tooltip="It shows a forecast of average ingredients used, which can be changed with buttons in the forecast. ">
                       Average ingredients used</h2>
-                    <div id="pizzaIngredients" class="diagram"></div>
+                    <div id="pizzaIngredients" class="diagram" style="height: 365px;"></div>
                   </div>
                 </div>
                 <div class="section-items">
@@ -285,20 +285,6 @@
                     <div class="diagram" id="quality"></div>
                   </div>
                 </div>
-              </div>
-            </div>
-          </div>
-          <div class="section-items">
-            <div class="section">
-              <h1>Attribution</h1>
-              <div class="section-items">
-                <h3>Daniel</h3>
-                <h3>Peter</h3>
-              </div>
-              <h3>Yannis</h3>
-              <div class="section-items">
-                <h3>Fatima </h3>
-                <h3>Tristan</h3>
               </div>
             </div>
           </div>
