--- a/src/frontend/views/franchise.html
+++ b/src/frontend/views/franchise.html
@@ -164,12 +164,12 @@
         <div class="section">
           <div class="section-items">
             <div class="btnbox">
-              <button class="btn" id="bestButton" style="z-index: 99;" data-tooltip="shows the best stores"
+              <button class="btn" id="bestButton" style="z-index: 99;" data-tooltip="Most sustainable store"
                 onclick="bestButton();">STABLE</button>
-              <button class="btn" id="worstButton" style="z-index: 99;" data-tooltip="shows the worst store"
+              <button class="btn" id="worstButton" style="z-index: 99;" data-tooltip="Most unstable stores"
                 onclick="worstButton();">UNSTABLE</button>
               <button class="btn" id="customButton" style="z-index: 99;"
-                data-tooltip="Choose custom stores from the right" onclick="customButton();">CUSTOM</button>
+                data-tooltip="Select stores from the bar chart" onclick="customButton();">CUSTOM</button>
             </div>
             <div class="btnbox" id="toggleBarChartBox" style="width: 80px; ">
               <button data-tooltip="Changes the view to show every store" class="btn" id="toggleBarChart"
