--- a/src/frontend/views/store.html
+++ b/src/frontend/views/store.html
@@ -241,28 +241,28 @@
                           <i class="fa-solid fa-pizza-slice"></i>
                         </div>
                         <h2>Pizzas</h2>
-                        <p id="totalPizzas">0</p>
+                        <p id="dowPizza">0</p>
                       </div>
                       <div class="statBox">
                         <div class="iconBox">
                           <i class="fas fa-dollar-sign"></i>
                         </div>
                         <h2>Revenue</h2>
-                        <p id="totalRevenue">0$</p>
+                        <p id="dowRevenue">0$</p>
                       </div>
                       <div class="statBox">
                         <div class="iconBox">
                           <i class="fas fa-shopping-bag"></i>
                         </div>
                         <h2>Orders</h2>
-                        <p id="totalOrders">0</p>
+                        <p id="dowOrder">0</p>
                       </div>
                       <div class="statBox">
                         <div class="iconBox">
                           <i class="fas fa-users"></i>
                         </div>
                         <h2>Customers</h2>
-                        <p id="totalCustomers">0</p>
+                        <p id="dowCustomer">0</p>
                       </div>
                     </div>
                   </div>
