--- a/src/frontend/views/store.html
+++ b/src/frontend/views/store.html
@@ -334,7 +334,7 @@
           document.getElementById('storeName').textContent = JSON.parse(localStorage.getItem("store")).storeID;
 
           mtd();
-
+          //fetchAveragePizzasSoldByDayOfWeek();
           function toggleSidebar(turnOff = false) {
             if (turnOff) {
               document.getElementById("sidebar").classList.remove("active");
