Better naming/tooltips

--- a/src/frontend/views/franchise.html
+++ b/src/frontend/views/franchise.html
@@ -172,7 +172,7 @@
                 data-tooltip="Select stores from the bar chart" onclick="customButton();">CUSTOM</button>
             </div>
             <div class="btnbox" id="toggleBarChartBox" style="width: 80px; ">
-              <button data-tooltip="Changes the view to show every store" class="btn" id="toggleBarChart"
+              <button data-tooltip="Change view of bar chart" class="btn" id="toggleBarChart"
                 style="z-index: 99;" onclick="toggleBarChart();"></button>
             </div>
             <h1 class="centered" data-tooltip="The right chart shows the revenue with your chosen condition. You can choose between the buttons 
