Final final commit :) (bugfix)

--- a/src/frontend/views/franchise.html
+++ b/src/frontend/views/franchise.html
@@ -172,7 +172,7 @@
                 onclick="customButton();">CUSTOM</button>
             </div>
             <div class="btnbox" id="toggleBarChartBox" style="width: 80px; ">
-              <button data-tooltip="Change view of bar chart" class="btn" id="toggleBarChart" style="z-index: 99;"
+              <button class="btn" id="toggleBarChart" style="z-index: 99;"
                 onclick="toggleBarChart();"></button>
             </div>
             <h1 class="centered" id="revenueTitle" style="margin-top: 4px;">Revenue</h1>
